--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ body {
 /* HERO */
 .hero {
   height: 100vh;
-  background: url("hero1.jpg") center/cover no-repeat;
+  background: url("hero.jpg") center/cover no-repeat;
   display: flex;
   align-items: center;
   justify-content: center;
