--- a/index.html
+++ b/index.html
@@ -118,24 +118,21 @@ footer {
     <div class="panel-item">
       💬
       <p>
-        Γιατί οδηγεί σε λύσεις που επιλέγουν τα ίδια τα μέρη της διαφοράς
-        και όχι σε λύσεις που επιβάλλονται από έναν δικαστή ή διαιτητή.
+        Η διαμεσολάβηση σας δίνει τη δυνατότητα να βρείτε λύσεις που επιλέγετε εσείς και τα άλλα εμπλεκόμενα μέρη, χωρίς να επιβάλλονται από δικαστή ή διαιτητή.
       </p>
     </div>
 
     <div class="panel-item">
       🤝
       <p>
-        Γιατί στη διαδικασία επικρατεί σεβασμός, πνεύμα συνεργασίας
-        και ισότιμος διάλογος των δύο πλευρών.
+        Η διαδικασία βασίζεται στον αμοιβαίο σεβασμό, τον διάλογο και τη συνεργασία, προσφέροντας ένα ασφαλές και ισότιμο περιβάλλον για όλες τις πλευρές.
       </p>
     </div>
 
     <div class="panel-item">
       ⚖️
       <p>
-        Γιατί η συμφωνία με την οποία επιλύεται η διαφορά
-        έχει ισχύ ισοδύναμη με δικαστική απόφαση.
+        Η συμφωνία που προκύπτει έχει νομική ισχύ αντίστοιχη με αυτή μιας δικαστικής απόφασης, εξασφαλίζοντας σταθερότητα και αξιοπιστία.
       </p>
     </div>
   </div>
