--- a/index.html
+++ b/index.html
@@ -109,33 +109,51 @@ footer {
     διαφορών, με σεβασμό στα μέρη και στις ιδιαιτερότητες κάθε υπόθεσης.
   </p>
 
-  <!-- Counters με αχνό μπλε background -->
-  <div class="counters" style="
-        display:flex; 
-        justify-content:center; 
-        gap:80px; 
-        margin-top:50px; 
-        background: rgba(0, 122, 204, 0.1); 
-        padding:40px 20px; 
-        border-radius:12px;
-      ">
+  <!-- Counters με αχνό μπλε πίσω από τα γράμματα -->
+  <div class="counters" style="display:flex; justify-content:center; gap:80px; margin-top:50px;">
     <div class="counter-item" style="text-align:center;">
       <div class="count" data-target="52" style="
             font-size:64px; 
             color:white; 
             font-weight:bold;
+            display:inline-block;
+            padding:20px 30px;
+            background: rgba(0, 122, 204, 0.2);
+            border-radius:12px;
             transition: all 0.3s ease;
           ">0</div>
-      <div style="font-size:18px; margin-top:8px; color:white; font-weight:bold;">Διεκπεραιωμένες διαμεσολαβήσεις</div>
+      <div style="
+            font-size:18px; 
+            margin-top:8px; 
+            color:white; 
+            font-weight:bold;
+            display:inline-block;
+            padding:6px 12px;
+            background: rgba(0, 122, 204, 0.2);
+            border-radius:8px;
+          ">Διεκπεραιωμένες διαμεσολαβήσεις</div>
     </div>
     <div class="counter-item" style="text-align:center;">
       <div class="count" data-target="5" style="
             font-size:64px; 
             color:white; 
             font-weight:bold;
+            display:inline-block;
+            padding:20px 30px;
+            background: rgba(0, 122, 204, 0.2);
+            border-radius:12px;
             transition: all 0.3s ease;
           ">0</div>
-      <div style="font-size:18px; margin-top:8px; color:white; font-weight:bold;">Χρόνια εμπειρίας στις διαμεσολαβήσεις</div>
+      <div style="
+            font-size:18px; 
+            margin-top:8px; 
+            color:white; 
+            font-weight:bold;
+            display:inline-block;
+            padding:6px 12px;
+            background: rgba(0, 122, 204, 0.2);
+            border-radius:8px;
+          ">Χρόνια εμπειρίας στις διαμεσολαβήσεις</div>
     </div>
   </div>
 </section>
