--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ footer {
     διαφορών, με σεβασμό στα μέρη και στις ιδιαιτερότητες κάθε υπόθεσης.
   </p>
 
-  <!-- Counters με πιο σκουρό μπλε πίσω από τα γράμματα -->
+  <!-- Counters με αχνό μπλε πίσω από τα γράμματα -->
   <div class="counters" style="display:flex; justify-content:center; gap:80px; margin-top:50px;">
     <div class="counter-item" style="text-align:center;">
       <div class="count" data-target="52" style="
@@ -118,7 +118,7 @@ footer {
             font-weight:bold;
             display:inline-block;
             padding:20px 30px;
-            background: rgba(0, 102, 204, 0.3);
+            background: rgba(0, 122, 204, 0.2);
             border-radius:12px;
             transition: all 0.3s ease;
           ">0</div>
@@ -129,7 +129,7 @@ footer {
             font-weight:bold;
             display:inline-block;
             padding:6px 12px;
-            background: rgba(0, 102, 204, 0.3);
+            background: rgba(0, 122, 204, 0.2);
             border-radius:8px;
           ">Διεκπεραιωμένες διαμεσολαβήσεις</div>
     </div>
@@ -140,7 +140,7 @@ footer {
             font-weight:bold;
             display:inline-block;
             padding:20px 30px;
-            background: rgba(0, 102, 204, 0.3);
+            background: rgba(0, 122, 204, 0.2);
             border-radius:12px;
             transition: all 0.3s ease;
           ">0</div>
@@ -151,7 +151,7 @@ footer {
             font-weight:bold;
             display:inline-block;
             padding:6px 12px;
-            background: rgba(0, 102, 204, 0.3);
+            background: rgba(0, 122, 204, 0.2);
             border-radius:8px;
           ">Χρόνια εμπειρίας στις διαμεσολαβήσεις</div>
     </div>
@@ -194,6 +194,7 @@ footer {
   window.addEventListener('scroll', animateCounters);
   window.addEventListener('load', animateCounters);
 </script>
+
 
 <!-- PANEL -->
 <div class="panel">
