--- a/index.html
+++ b/index.html
@@ -109,9 +109,9 @@ footer {
     διαφορών, με σεβασμό στα μέρη και στις ιδιαιτερότητες κάθε υπόθεσης.
   </p>
 
-  <!-- Counters panel: πλήρες οριζόντιο background -->
+  <!-- Counters panel: ενιαίο σκουρό μπλε διάφανο -->
   <div class="counters-panel" style="
-        background: rgba(0, 51, 102, 0.7); /* πιο σκουρό μπλε με διαφάνεια */
+        background: rgba(0, 51, 102, 0.85); /* σκούρο μπλε, διάφανο */
         padding: 60px 20px;
         border-radius: 12px;
         margin-top: 50px;
@@ -195,6 +195,7 @@ footer {
   window.addEventListener('scroll', animateCounters);
   window.addEventListener('load', animateCounters);
 </script>
+
 
 <!-- PANEL -->
 <div class="panel">
