--- a/index.html
+++ b/index.html
@@ -109,12 +109,11 @@ footer {
     διαφορών, με σεβασμό στα μέρη και στις ιδιαιτερότητες κάθε υπόθεσης.
   </p>
 
-  <!-- Counters panel: ενιαίο σκουρό μπλε διάφανο -->
+  <!-- Counters panel: ενιαίο, full-width, σκουρό μπλε, διαφανές -->
   <div class="counters-panel" style="
-        background: rgba(0, 51, 102, 0.85); /* σκούρο μπλε, διάφανο */
-        padding: 60px 20px;
-        border-radius: 12px;
-        margin-top: 50px;
+        background: rgba(0, 0, 80, 0.7); /* σκούρο μπλε, διάφανο */
+        width: 100%;
+        padding: 60px 0;
         display:flex;
         justify-content:center;
       ">
