--- a/index.html
+++ b/index.html
@@ -98,26 +98,26 @@ footer {
 
 <!-- BIO -->
 <section id="about" style="position:relative; z-index:1;">
-  <h2>Σχετικά</h2>
-  <p>
+  <h2 style="text-align:center;">Σχετικά</h2>
+  <p style="text-align:center; max-width:800px; margin: 0 auto;">
     Η Γκουγκουλή Βασιλική είναι δικηγόρος και πιστοποιημένη διαμεσολαβήτρια,
     με εμπειρία στην εξωδικαστική επίλυση διαφορών και στην παροχή
     αξιόπιστων νομικών υπηρεσιών.
   </p>
-  <p>
+  <p style="text-align:center; max-width:800px; margin: 20px auto 0 auto;">
     Στόχος της είναι η αποτελεσματική, ανθρώπινη και ασφαλής επίλυση
     διαφορών, με σεβασμό στα μέρη και στις ιδιαιτερότητες κάθε υπόθεσης.
   </p>
 
-  <!-- Counters panel: ενιαίο, full-width, σκουρό μπλε, διαφανές -->
+  <!-- Counters panel: full-width, σκούρο μπλε διάφανο -->
   <div class="counters-panel" style="
-        background: rgba(0, 0, 80, 0.7); /* σκούρο μπλε, διάφανο */
+        background: rgba(0, 0, 80, 0.85); /* σκούρο μπλε με διάφανεια */
         width: 100%;
         padding: 60px 0;
         display:flex;
         justify-content:center;
       ">
-    <div class="counters" style="display:flex; gap:80px; max-width:900px; width:100%;">
+    <div class="counters" style="display:flex; gap:100px; flex-wrap:wrap; justify-content:center; width:100%; max-width:900px;">
       <div class="counter-item" style="text-align:center; opacity:0; transform: translateY(30px); transition: all 1s ease;">
         <div class="count" data-target="52" style="
               font-size:64px; 
