--- a/index.html
+++ b/index.html
@@ -109,15 +109,13 @@ footer {
     διαφορών, με σεβασμό στα μέρη και στις ιδιαιτερότητες κάθε υπόθεσης.
   </p>
 
-  <!-- Counters panel: full-width, σκούρο μπλε διάφανο -->
-  <div class="counters-panel" style="
-        background: rgba(0, 0, 80, 0.85); /* σκούρο μπλε με διάφανεια */
+  <!-- Full-width counters panel -->
+  <div style="
         width: 100%;
+        background: rgba(0, 0, 80, 0.85); /* σκουρό μπλε διάφανο που σου άρεσε */
         padding: 60px 0;
-        display:flex;
-        justify-content:center;
       ">
-    <div class="counters" style="display:flex; gap:100px; flex-wrap:wrap; justify-content:center; width:100%; max-width:900px;">
+    <div class="counters" style="display:flex; justify-content:center; gap:100px;">
       <div class="counter-item" style="text-align:center; opacity:0; transform: translateY(30px); transition: all 1s ease;">
         <div class="count" data-target="52" style="
               font-size:64px; 
@@ -166,7 +164,7 @@ footer {
         setTimeout(() => {
           item.style.opacity = 1;
           item.style.transform = "translateY(0)";
-        }, index * 200); // μικρή καθυστέρηση μεταξύ των δύο
+        }, index * 200);
       });
 
       // Μετρητές
