--- a/index.html
+++ b/index.html
@@ -84,9 +84,20 @@ footer {
   color: #777;
 }
 </style>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
+
+<nav class="navbar">
+  <div class="logo">Γκουγκουλή Βασιλική</div>
+  <ul>
+    <li><a href="index.html">Αρχική</a></li>
+    <li><a href="about.html">Βιογραφικό</a></li>
+    <li><a href="mediation.html">Διαμεσολάβηση</a></li>
+    <li><a href="contact.html">Επικοινωνία</a></li>
+  </ul>
+</nav>
 
 <!-- HERO -->
 <div class="hero">
