--- a/mediation.html
+++ b/mediation.html
@@ -9,7 +9,9 @@
 <body>
 
 <nav class="navbar">
-    <div class="logo">Γκουγκουλή Βασιλική</div>
+    <a href="index.html" class="logo-link">
+        <img src="img/logo.png" alt="Λογότυπο VG" class="logo-img">
+    </a>
     <ul>
         <li><a href="index.html">Αρχική</a></li>
         <li><a href="about.html">Βιογραφικό</a></li>
