--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
     <h3>Δεξιότητες & Γλώσσες</h3>
     <ul>
         <li><strong>Ξένες Γλώσσες:</strong> Αγγλικά (University of Michigan & Cambridge ESOL), Γερμανικά (Goethe-Zertifikat).</li>
-        <li><strong>Δεξιότητες:</strong> Διαπραγμάτευση, Ενεργητική Ακρόαση, Διαχείριση Κρίσεων.</li>
+        <li><strong>Δεξιότητες:</strong> Διαπραγμάτευση, Διαχείριση Κρίσεων.</li>
         <li><strong>Ψηφιακές Δεξιότητες:</strong> Πιστοποίηση ECDL.</li>
     </ul>
 </div>
