--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
 </nav>
 
 <section class="container about-section">
-    <h2>Σχετικά με εμένα</h2>
+    <h2>Βιογραφικό</h2>
 
     <div class="about-feature-block">
         
