--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
         <div style="flex: 1; min-width: 300px; max-width: 450px;">
             <h3>Φόρμα Εκδήλωσης Ενδιαφέροντος</h3>
             
-            <form action="https://formspree.io/f/YOUR_NEW_ID_HERE" method="POST" class="minimal-form">
+            <form action="https://formspree.io/f/xykpzovl">
                 
                 <div class="form-group">
                     <label for="name">Όνομα</label>
