--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
         </div>
 
         <div style="flex: 1; min-width: 300px; max-width: 450px;">
-            <h3>Φόρμα Εκδήλωσης Ενδιαφέροντος</h3>
+            <h3>Φόρμα Επικοινωνίας</h3>
             
             <form action="https://formspree.io/f/xykpzovl">
                 
