--- a/contact.html
+++ b/contact.html
@@ -28,12 +28,12 @@
         <div class="contact-info-side">
             <h3>Στοιχεία Επικοινωνίας</h3>
             <div class="contact-details">
-                <p><strong>Διεύθυνση:</strong> Οδός Παραδείγματος 12, Αθήνα</p>
-                <p><strong>Τηλέφωνο:</strong> 210 1234567</p>
-                <p><strong>Κινητό:</strong> 69XX XXXXXX</p>
+                <p><strong>Διεύθυνση:</strong> Κιλικίας 24, Αθήνα</p>
+                <p><strong>Τηλέφωνο:</strong> 69897058137</p>
                 <p><strong>Email:</strong> vasia.gougouli@gmail.com</p>
+                <p><strong>Ωράριο:</strong> Κατόπιν ραντεβού</p>
             </div>
-            </div>
+        </div>
 
         <div class="form-panel dark-panel-lined">
             <h3>Φόρμα Επικοινωνίας</h3>
@@ -61,7 +61,13 @@
                 </div>
 
                 <div class="form-group" style="margin-top: 40px;">
-                    <button type="submit" class="btn-submit-gold">Αποστολή</
+                    <button type="submit" class="btn-submit-gold">Αποστολή</button>
+                </div>
+            </form>
+        </div>
+
+    </div>
+</section>
 <footer>
     © 2026 Γκουγκουλή Βασιλική
 </footer>
