--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,8 @@
         <div class="form-panel dark-panel-lined">
             <h3>Φόρμα Επικοινωνίας</h3>
             
-            <form action="https://formspree.io/f/xykpzovl">
+            <form action="https://formspree.io/f/xykpzovl"
+                method="POST>
                 
                 <div class="form-group">
                     <label for="name">Ονοματεπώνυμο</label>
