--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@
             <h3>Φόρμα Επικοινωνίας</h3>
             
             <form action="https://formspree.io/f/xykpzovl"
-                method="POST>
+                method="POST">
                 
                 <div class="form-group">
                     <label for="name">Ονοματεπώνυμο</label>
