--- a/contact.html
+++ b/contact.html
@@ -38,8 +38,7 @@
         <div class="form-panel dark-panel-lined">
             <h3>Φόρμα Επικοινωνίας</h3>
             
-            <form action="https://formspree.io/f/xykpzovl"
-                method="POST">
+            <form action="https://formspree.io/f/xykpzovl">
                 
                 <div class="form-group">
                     <label for="name">Ονοματεπώνυμο</label>
